# theswaptable

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.override.yaml  docker-compose.yaml
backend/: Dockerfile  Dockerfile-devsetup  pyproject.toml
backend/backend/: app.py  devsetup.py  model.py  queries.py  utils.py
backend/backend/db/: item.py  items.py  mixed.py  shared.py  user.py  users.py  utils.py  vote.py  votes.py  voting.py
backend/backend/initialize/: dev.py  prod.py
backend/backend/sqldb/: devsetup.py  item.py  model.py  shared.py  user.py  utils.py  vote.py
backend/dev/: dev_data.py  dev_mongo_initialize.py  requirements.txt
backend/tests/: dev_mongo_initialize.py  test_app.py  test_db.py  test_model.py  utils.py
backend/tests/test_db/: test_item.py  test_items.py  test_mixed.py  test_shared.py  test_user.py  test_users.py  test_vote.py  test_votes.py  test_voting.py
backend/tests/test_sqldb/: test_item.py  test_shared.py  test_user.py  test_vote.py
config/dev/: postgres_schema
frontend/: Dockerfile  jsconfig.json  package.json  pnpm-lock.yaml
frontend/components/: LibraryCard.js
frontend/components/icons/: BookClosed.js  BookOpen.js  EyeClosed.js  EyeOpen.js
frontend/pages/: gallery.js  index.js
frontend/pages/api/: example.js  users.js
frontend/pages/api/user/: [id].js
frontend/prod/: Dockerfile
frontend/styles/: LibraryCard.module.css
postgres/: initialize.sql
