[tool.poetry]
name = "curios.dev-backend"
version = "0.1.0"
description = "Backend for curios.dev"
authors = ["Toby Shearman <toby.shearman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
psycopg2-binary = "^2.9.6"
uuid = "^1.30"
sqlmodel = "^0.0.8"
pydantic = {extras = ["email"], version = "^1.10.9"}
httpx = "^0.24.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.4.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "external: marks tests as requiring external resources (deselect with '-m \"not external\"')",
]
